--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: tracker-app-container
-          image: tracker-app/task-tracker:latest
+          image: tracker-app/task:1.0
           resources:
             requests:
               memory: "90Mi"
