--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -57,34 +57,34 @@ jobs:
           push: true
 
       # Step 8: Log in to Namespaxe using GitHub secrets
-      - name: Namespaxe login
-        env:
-          NAMESPAXE_USERNAME: ${{ secrets.NAMESPAXE_USERNAME }}
-          NAMESPAXE_PASSWORD: ${{ secrets.NAMESPAXE_PASSWORD }}
-        run: |
-          namespaxe login --username "${{ secrets.NAMESPAXE_USERNAME }}" --password "${{ secrets.NAMESPAXE_PASSWORD }}"
+      # - name: Namespaxe login
+      #   env:
+      #     NAMESPAXE_USERNAME: ${{ secrets.NAMESPAXE_USERNAME }}
+      #     NAMESPAXE_PASSWORD: ${{ secrets.NAMESPAXE_PASSWORD }}
+      #   run: |
+      #     namespaxe login --username "${{ secrets.NAMESPAXE_USERNAME }}" --password "${{ secrets.NAMESPAXE_PASSWORD }}"
 
-      # Step 9: Fetch the namespace list and extract the first one
-      - name: Get the first namespace
-        id: fetch_namespace
-        run: |
-          response=$(namespaxe list ns --clean)
-          namespace=$(echo $response | jq -r '.data[0].ns_name')
-          echo "namespace=$namespace" >> $GITHUB_ENV
+      # # Step 9: Fetch the namespace list and extract the first one
+      # - name: Get the first namespace
+      #   id: fetch_namespace
+      #   run: |
+      #     response=$(namespaxe list ns --clean)
+      #     namespace=$(echo $response | jq -r '.data[0].ns_name')
+      #     echo "namespace=$namespace" >> $GITHUB_ENV
 
-      # Step 10: Install Kubernetes configuration
-      - name: Install Kubernetes configuration
-        run: |
-          namespaxe install-k8s-config ns ${{ env.namespace }}
+      # # Step 10: Install Kubernetes configuration
+      # - name: Install Kubernetes configuration
+      #   run: |
+      #     namespaxe install-k8s-config ns ${{ env.namespace }}
 
-      # Step 11: Install kubectl
-      - name: Install kubectl
-        run: |
-          curl -LO https://storage.googleapis.com/kubernetes-release/release/`curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt`/bin/linux/amd64/kubectl
-          chmod +x ./kubectl
-          sudo mv ./kubectl /usr/local/bin/kubectl
+      # # Step 11: Install kubectl
+      # - name: Install kubectl
+      #   run: |
+      #     curl -LO https://storage.googleapis.com/kubernetes-release/release/`curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt`/bin/linux/amd64/kubectl
+      #     chmod +x ./kubectl
+      #     sudo mv ./kubectl /usr/local/bin/kubectl
 
-      # Step 12: Deploy to Kubernetes
-      - name: Deploy the app using kubectl
-        run: |
-          kubectl apply -f k8s/deployment.yaml  # Ensure your k8s deployment file is set up correctly
+      # # Step 12: Deploy to Kubernetes
+      # - name: Deploy the app using kubectl
+      #   run: |
+      #     kubectl apply -f k8s/deployment.yaml  # Ensure your k8s deployment file is set up correctly
